feat: argocd setup

--- a/infra/manifests/atlantis/ingress.yml
+++ b/infra/manifests/atlantis/ingress.yml
@@ -2,7 +2,7 @@ apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: atlantis-ingress
-  namespace: default
+  namespace: atlantis
   annotations:
     kubernetes.io/ingress.allow-http: "true"
     kubernetes.io/ingress.global-static-ip-name: spino-atlantis-static-ip-prod
