--- a/infra/manifests/atlantis/cert.yml
+++ b/infra/manifests/atlantis/cert.yml
@@ -2,6 +2,7 @@ apiVersion: networking.gke.io/v1
 kind: ManagedCertificate
 metadata:
   name: atlantis-cert
+  namespace: atlantis
 spec:
   domains:
   - atlantis.spino.kurichi.dev
