--- a/infra/manifests/atlantis/ksa.yml
+++ b/infra/manifests/atlantis/ksa.yml
@@ -2,5 +2,6 @@ apiVersion: v1
 kind: ServiceAccount
 metadata:
   name: atlantis-ksa
+  namespace: atlantis
   annotations:
     iam.gke.io/gcp-service-account: "atlantis-user@spino-cup-2024.iam.gserviceaccount.com"
