fix: modules path

--- a/atlantis.yaml
+++ b/atlantis.yaml
@@ -7,6 +7,6 @@ projects:
       when_modified:
         - '*.tf'
         - '*.tfvars'
-        - '../modules/**/*.tf'
+        - '../../modules/**/*.tf'
       enabled: true
 
