--- a/infra/manifests/atlantis/statefulset.yml
+++ b/infra/manifests/atlantis/statefulset.yml
@@ -26,7 +26,7 @@ spec:
       containers:
       - name: atlantis
         image: ghcr.io/runatlantis/atlantis:v0.29.0 # 1. Replace <VERSION> with the most recent release.
-        args: ["server", "--write-git-creds"]
+        args: ["server", "--write-git-creds", "--config", "/config/config.yml"]
         env:
         - name: ATLANTIS_REPO_ALLOWLIST
           value: github.com/tosaken1116/spino_cup_2024
@@ -62,6 +62,8 @@ spec:
         volumeMounts:
         - name: atlantis-data
           mountPath: /atlantis
+        - name: config-data
+          mountPath: /config
         ports:
         - name: atlantis
           containerPort: 4141
@@ -88,6 +90,10 @@ spec:
             port: 4141
             # If using https, change this to HTTPS
             scheme: HTTP
+      volumes:
+        - name: config-data
+          configMap:
+            name: configmap-text
   volumeClaimTemplates:
   - metadata:
       name: atlantis-data
