--- a/infra/manifests/argocd/ingress.yml
+++ b/infra/manifests/argocd/ingress.yml
@@ -6,10 +6,11 @@ metadata:
   annotations:
     kubernetes.io/ingress.allow-http: "true"
     kubernetes.io/ingress.global-static-ip-name: spino-argo-static-ip-prod
-
-    networking.gke.io/managed-certificates: argo-cert
-    spec.ingressClassName: "gce"
+    networking.gke.io/managed-certificates: argocd-cert
+    ingress.gcp.kubernetes.io/redirect-http-to-https: "false"
+    kubernetes.io/ingress.class: "gce"
 spec:
+  # ingressClassName: "gce"
   rules:
     - host: "argo.spino.kurichi.dev"
       http:
@@ -19,5 +20,5 @@ spec:
             backend:
               service:
                 name: argocd-server
-                port: 
+                port:
                   number: 80
