--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "dev": "run-p dev:*",
     "dev:storybook": "storybook dev -p 6006",
+    "dev:genUrl": "tsx scripts/genUrlPaths.ts",
     "dev:vite": "vite",
     "build": "run-s build:*",
     "build:vite": "tsc -b && vite build",
@@ -20,11 +21,13 @@
     "format:markuplint": "markuplint \"**/*.tsx\" --fix  --problem-only",
     "start": "vite preview",
     "start:storybook": "http-server storybook-static --port 6006 -s",
-    "prescreenshot": "pnpm run start:storybook &",
     "screenshot": "test-storybook --url http://127.0.0.1:6006",
-    "postscreenshot": "lsof -t -i :6006 | xargs kill -9"
+    "vrt": "reg-suit run",
+    "bundle:analyze": "vite-bundle-visualizer -t json -o __bundle__/result.json",
+    "bundle:compare": "tsx scripts/compareBundle.ts"
   },
   "dependencies": {
+    "@tanstack/react-router": "^1.57.18",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
@@ -42,25 +45,35 @@
     "@storybook/react-vite": "^8.3.0",
     "@storybook/test": "^8.3.0",
     "@storybook/test-runner": "^0.19.1",
+    "@tanstack/router-devtools": "^1.57.18",
+    "@tanstack/router-vite-plugin": "^1.57.15",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react-swc": "^3.5.0",
     "@vitest/coverage-v8": "^2.0.5",
     "autoprefixer": "^10.4.20",
+    "chokidar": "^4.0.0",
     "concurrently": "^9.0.1",
     "globals": "^15.9.0",
     "http-server": "^14.1.1",
     "markuplint": "^4.9.3",
     "npm-run-all": "^4.1.5",
     "postcss": "^8.4.45",
+    "reg-keygen-git-hash-plugin": "^0.14.3",
+    "reg-notify-github-plugin": "^0.14.4",
+    "reg-publish-gcs-plugin": "^0.14.4",
+    "reg-suit": "^0.14.4",
     "storybook": "^8.3.0",
     "storycap": "^5.0.1",
     "storycap-testrun": "^0.0.2",
     "tailwindcss": "^3.4.11",
+    "tsx": "^4.19.1",
     "typescript": "^5.5.3",
     "typescript-eslint": "^8.0.1",
     "vite": "^5.4.1",
-    "vitest": "^2.0.5"
+    "vite-bundle-visualizer": "^1.2.1",
+    "vitest": "^2.0.5",
+    "wait-on": "^8.0.1"
   },
   "packageManager": "pnpm@9.10.0+sha256.355a8ab8dbb6ad41befbef39bc4fd6b5df85e12761d2724bd01f13e878de4b13"
 }
