chore: apply paths option  to front ci

--- a/.github/workflows/front-ci.yaml
+++ b/.github/workflows/front-ci.yaml
@@ -3,6 +3,10 @@ on:
   push:
     branches:
       - main
+    paths:
+      - frontend/**
+      - "!*.md"
+      - .github/workflows/front-ci.yaml
 
   pull_request:
     types: [opened, synchronize, reopened]
