chore: add workflow file to trigger

--- a/.github/workflows/back-deploy.yaml
+++ b/.github/workflows/back-deploy.yaml
@@ -12,6 +12,7 @@ on:
       - 'go.mod'
       - 'go.sum'
       - .dockerignore
+      - '.github/workflows/back-deploy.yaml'
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}
