--- a/.github/workflows/back-deploy.yaml
+++ b/.github/workflows/back-deploy.yaml
@@ -21,6 +21,9 @@ concurrency:
 jobs:
   deploy:
     runs-on: ubuntu-latest
+    permissions:
+      id-token: write
+      contents: read
     steps:
       - name: Checkout
         uses: actions/checkout@v4
