--- a/.github/workflows/back-deploy.yaml
+++ b/.github/workflows/back-deploy.yaml
@@ -69,7 +69,7 @@ jobs:
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
           commit-message: 'update container image'
-          commiter: GitHub <noreply@github.com>
+          committer: GitHub <noreply@github.com>
           author: ${{ github.actor }} <${{ github.actor }}@users.noreply.github.com>
           signoff: false
           branch: release/${{ github.sha }}
