--- a/.github/workflows/back-deploy.yaml
+++ b/.github/workflows/back-deploy.yaml
@@ -24,6 +24,7 @@ jobs:
     permissions:
       id-token: write
       contents: read
+      pull-requests: write
     steps:
       - name: Checkout
         uses: actions/checkout@v4
