fix: api client generate plugin

--- a/frontend/biome.json
+++ b/frontend/biome.json
@@ -5,7 +5,7 @@
 	},
 	"files": {
 		"include": ["src/**/*"],
-		"ignore": ["src/routeTree.gen.ts"]
+		"ignore": ["src/routeTree.gen.ts", "src/generated"]
 	},
 	"linter": {
 		"enabled": true,
