--- a/frontend/package.json
+++ b/frontend/package.json
@@ -29,7 +29,8 @@
   "dependencies": {
     "@tanstack/react-router": "^1.57.18",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "reconnecting-websocket": "^4.4.0"
   },
   "devDependencies": {
     "@biomejs/biome": "^1.8.3",
