--- a/.github/workflows/front-ci.yaml
+++ b/.github/workflows/front-ci.yaml
@@ -10,7 +10,10 @@ on:
 
   pull_request:
     types: [opened, synchronize, reopened]
-
+    paths:
+      - frontend/**
+      - "!*.md"
+      - .github/workflows/front-ci.yaml
   workflow_dispatch:
 
 concurrency:
