--- a/.github/workflows/front-cd.yml
+++ b/.github/workflows/front-cd.yml
@@ -13,6 +13,10 @@ concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}
   cancel-in-progress: true
 
+defaults:
+  run:
+    working-directory: frontend
+    shell: bash
 jobs:
   build-and-upload:
     if: ${{ github.event.workflow_run.event == 'push' }}
