--- a/.github/workflows/front-ci.yaml
+++ b/.github/workflows/front-ci.yaml
@@ -7,6 +7,7 @@ on:
       - frontend/**
       - "!*.md"
       - .github/workflows/front-ci.yaml
+      - .github/workflows/front-cd.yaml
 
   pull_request:
     types: [opened, synchronize, reopened]
