--- a/backend/docker/app/Dockerfile
+++ b/backend/docker/app/Dockerfile
@@ -7,7 +7,7 @@ COPY go.mod go.sum ./
 RUN go mod download && go mod verify
 
 COPY . .
-RUN go build -v -o /usr/local/bin/app ./...
+RUN go build -v -o /usr/local/bin/app server.go
 
 EXPOSE 8080
 
