--- a/backend/docker/app/Dockerfile
+++ b/backend/docker/app/Dockerfile
@@ -1,14 +1,41 @@
-FROM golang:1.23
+# syntax=docker/dockerfile:1
 
-WORKDIR /usr/src/app
+ARG GO_VERSION=1.23.1
+FROM --platform=$BUILDPLATFORM golang:${GO_VERSION} AS build
+WORKDIR /app
 
-# pre-copy/cache go.mod for pre-downloading dependencies and only redownloading them in subsequent builds if they change
-COPY go.mod go.sum ./
-RUN go mod download && go mod verify
+RUN --mount=type=cache,target=/go/pkg/mod/ \
+    --mount=type=bind,source=go.mod,target=go.mod \
+    go mod download -x
 
-COPY . .
-RUN go build -v -o /usr/local/bin/app server.go
+ARG TARGETARCH
+
+RUN --mount=type=cache,target=/go/pkg/mod/ \
+    --mount=type=bind,target=. \
+    CGO_ENABLED=0 GOARCH=$TARGETARCH go build -o /bin/server server.go
+
+FROM alpine:latest AS final
+
+RUN --mount=type=cache,target=/var/cache/apk \
+    apk --update add \
+        ca-certificates \
+        tzdata \
+        && \
+        update-ca-certificates
+
+ARG UID=10001
+RUN adduser \
+    --disabled-password \
+    --gecos "" \
+    --home "/nonexistent" \
+    --shell "/sbin/nologin" \
+    --no-create-home \
+    --uid "${UID}" \
+    appuser
+USER appuser
+
+COPY --from=build /bin/server /bin/
 
 EXPOSE 8080
 
-CMD ["app"]
+ENTRYPOINT [ "/bin/server" ]
