--- a/frontend/package.json
+++ b/frontend/package.json
@@ -30,7 +30,9 @@
     "@tanstack/react-router": "^1.57.18",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "reconnecting-websocket": "^4.4.0"
+    "reconnecting-websocket": "^4.4.0",
+    "swr": "^2.2.5",
+    "uuid": "^10.0.0"
   },
   "devDependencies": {
     "@biomejs/biome": "^1.8.3",
@@ -50,16 +52,22 @@
     "@storybook/test-runner": "^0.19.1",
     "@tanstack/router-devtools": "^1.57.18",
     "@tanstack/router-vite-plugin": "^1.57.15",
+    "@testing-library/react": "^16.0.1",
+    "@testing-library/react-hooks": "^8.0.1",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
+    "@types/uuid": "^10.0.0",
     "@vitejs/plugin-react-swc": "^3.5.0",
     "@vitest/coverage-v8": "^2.0.5",
     "autoprefixer": "^10.4.20",
     "chokidar": "^4.0.0",
     "concurrently": "^9.0.1",
+    "dotenv": "^16.4.5",
     "globals": "^15.9.0",
     "http-server": "^14.1.1",
+    "jsdom": "^25.0.1",
     "markuplint": "^4.9.3",
+    "msw": "^2.4.9",
     "npm-run-all": "^4.1.5",
     "postcss": "^8.4.45",
     "reg-keygen-git-hash-plugin": "^0.14.3",
@@ -78,5 +86,11 @@
     "vitest": "^2.0.5",
     "wait-on": "^8.0.1"
   },
-  "packageManager": "pnpm@9.10.0+sha256.355a8ab8dbb6ad41befbef39bc4fd6b5df85e12761d2724bd01f13e878de4b13"
+  "packageManager": "pnpm@9.10.0+sha256.355a8ab8dbb6ad41befbef39bc4fd6b5df85e12761d2724bd01f13e878de4b13",
+  "msw": {
+    "workerDirectory": [
+      "assets",
+      "public"
+    ]
+  }
 }
