fix: color picker

--- a/frontend/.markuplintrc
+++ b/frontend/.markuplintrc
@@ -7,5 +7,16 @@
   },
   "extends": [
     "markuplint:recommended"
-  ]
+  ],
+  "rules": {
+    "invalid-attr": {
+      "options": {
+        "allowAttrs": [
+          "onTouchStart",
+          "onTouchMove",
+          "onTouchEnd"
+        ]
+      }
+    }
+  }
 }
