--- a/frontend/.env
+++ b/frontend/.env
@@ -1,2 +1,2 @@
-VITE_DEV_BASE_URL=http://localhost:8000
-VITE_PROD_BASE_URL=https://api.example.com
+VITE_DEV_API_DOMAIN=localhost:8000
+VITE_PROD_API_DOMAIN=api.example.com
