--- a/infra/manifests/api/service.yml
+++ b/infra/manifests/api/service.yml
@@ -4,6 +4,8 @@ kind: Service
 metadata:
   name: api
   namespace: default
+  annotations:
+    cloud.google.com/backend-config: '{"default": "api-websocket-backendconfig"}'
 spec:
   selector:
     app: api
