fix: add https://

--- a/infra/manifests/api/deployment.yml
+++ b/infra/manifests/api/deployment.yml
@@ -48,7 +48,7 @@ spec:
             - name: DB_PORT
               value: "3306"
             - name: ALLOW_ORIGIN
-              value: "spino.kurichi.dev"
+              value: "https://spino.kurichi.dev"
           resources:
             requests:
               cpu: 100m
