--- a/frontend/package.json
+++ b/frontend/package.json
@@ -29,6 +29,7 @@
   },
   "dependencies": {
     "@tanstack/react-router": "^1.57.18",
+    "clsx": "^2.1.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "reconnecting-websocket": "^4.4.0",
