--- a/.github/workflows/back-ci.yaml
+++ b/.github/workflows/back-ci.yaml
@@ -73,3 +73,4 @@ jobs:
         uses: golangci/golangci-lint-action@v6
         with:
           github-token: ${{ secrets.GITHUB_TOKEN }}
+          working-directory: backend
