--- a/.github/workflows/back-ci.yaml
+++ b/.github/workflows/back-ci.yaml
@@ -58,7 +58,7 @@ jobs:
         with:
           go-version-file: backend/go.mod
       - name: Run tests with coverage report output
-        run: go test ./... -coverprofile=coverage.out
+        run: go test ./... -coverprofile=./../coverage.out
       - uses: k1LoW/octocov-action@v0
   lint:
     name: Lint
