--- a/frontend/package.json
+++ b/frontend/package.json
@@ -31,6 +31,7 @@
     "@tanstack/react-router": "^1.57.18",
     "clsx": "^2.1.1",
     "firebase": "^10.13.2",
+    "qrcode.react": "^4.0.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "reconnecting-websocket": "^4.4.0",
